# BabylonNative

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Cargo.toml  FindBabylonNativeCache.cmake  IMMERSIVE_DEMO.md  IMMERSIVE_EXPERIENCE_DEMO.md  NOTICE.md  README.md  SimplifiedAPI.md  TODO_REMOVE_THIS_CMakeLists.txt  VISIONOS_BUILD.md  azure-pipelines-babylonscripts.yml  azure-pipelines.yml  clangFormat.bat  copilot-mobile.md  debug_immersive_test.swift  nightly.yml  package.json  spatial_scene_layout.txt
Apps/: .babelrc  CMakeLists.txt  babel-plugin-replace-bigint.js  babel.config.json  babelrc.json  chai.js  package-lock.json  package.json
Apps/BabylonScripts/: DownloadAndCopyScripts.ps1  UpdateScripts.ps1  ValidateFiles.ps1  ValidateFilesExistInLatestNPMPackages.ps1  babylon.glTF2FileLoader.js  babylon.gui.js  babylon.gui.js.map  babylon.gui.module.d.ts  babylonjs.materials.js  package.json  recast.js
Apps/Dependencies/: package-lock.json  package.json  postinstall.js  recast.js
Apps/HeadlessScreenshotApp/: CMakeLists.txt  README.md
Apps/HeadlessScreenshotApp/Scripts/: index.js
Apps/HeadlessScreenshotApp/Win32/: App.cpp  RenderDoc.cpp  RenderDoc.h
Apps/JSUnitTests/: CMakeLists.txt
Apps/ModuleLoadTest/: CMakeLists.txt
Apps/ModuleLoadTest/Source/: App.Apple.mm  App.Win32.cpp  App.X11.cpp  App.cpp  App.h  ModuleSnapshot.Linux.cpp  ModuleSnapshot.Win32.cpp  ModuleSnapshot.h  ModuleSnapshot.macOS.mm
Apps/NativeTextureApp/: App.cpp  CMakeLists.txt  Utility.h
Apps/NativeTextureApp/Scripts/: experience.js  playground_runner.js  slideShow_experience.js
Apps/Playground/: CMakeLists.txt  babel.config.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
Apps/Playground/Android/: .gitignore  build.gradle  gradle.properties  gradlew  (+1 more)
Apps/PrecompiledShaderTest/: CMakeLists.txt  README.md
Apps/ShaderCacheGenerator/: CMakeLists.txt  README.md
Apps/StyleTransferApp/: CMakeLists.txt  README.md
Apps/UnitTests/: CMakeLists.txt  UnitTests.cpp  babel-plugin-replace-bigint.js  package.json  webpack.config.js
Apps/ValidationTests/: CMakeLists.txt
Apps/napi-jsi/: CMakeLists.txt  package-lock.json  package.json
Apps/scripts/: getNightly.js
Core/: CMakeLists.txt
Core/AppLifeCycle/: CMakeLists.txt
Core/AppRuntime/: CMakeLists.txt
Core/Graphics/: CMakeLists.txt
Core/GraphicsExternalResource/: CMakeLists.txt
Core/GraphicsExternalResourceWrapper/: CMakeLists.txt
Core/GraphicsInterops/: CMakeLists.txt
Core/GraphicsWgpu/: CMakeLists.txt
Core/JsRuntime/: CMakeLists.txt
Core/NativeGraphics/: CMakeLists.txt
Core/Source/: AppRuntime.cpp  AppRuntimeImpl.cpp  AppRuntimeImpl.h  RuntimeImpl.cpp  RuntimeWin32.cpp  TaskChain.cpp  TaskChain.h
Dependencies/: CMakeLists.txt
Dependencies/Android/: std_char_traits_uint16_t.h
Dependencies/AndroidExtensions/: CMakeLists.txt
Dependencies/BabylonNativeCMakeFunctions/: CMakeLists.txt
Dependencies/BabylonNativeUtils/: CMakeLists.txt
Dependencies/CMakeExtensions/: CMakeLists.txt
Dependencies/UrlLib/: CMakeLists.txt
Dependencies/WindowsAppSDK/: .gitignore  Build.cmd  Build.ps1  CMakeLists.txt  README.md
Dependencies/babylon_native_utils/: CMakeLists.txt
Dependencies/jsi/: CMakeLists.txt
Dependencies/napi/: CMakeLists.txt  OnLibraryLinkedHandlers.cmake  OnLinkedAsDependency.cmake
Dependencies/napi-extensions/: CMakeLists.txt
Dependencies/napi-jsi/: CMakeLists.txt
Dependencies/openssl/: OpenSSLStaticConfig.cmake
Dependencies/v8inspector/: CMakeLists.txt
Dependencies/xr/: CMakeLists.txt
Embedding/: CMakeLists.txt
Embedding/Android/: CMakeLists.txt
Embedding/Apple/: CMakeLists.txt
Embedding/Source/: Runtime.cpp  RuntimeImpl.h  View.cpp
Integrations/: CMakeLists.txt
Integrations/Android/: CMakeLists.txt
Integrations/Apple/: CMakeLists.txt
Integrations/Source/: Runtime.cpp  RuntimeImpl.h  View.cpp  ViewImpl_Android.cpp  ViewImpl_Unix.cpp  ViewImpl_Win32.cpp  ViewImpl_WinRT.cpp  ViewImpl_iOS.mm  ViewImpl_macOS.mm  ViewImpl_visionOS.mm
Plugins/: CMakeLists.txt
Plugins/BabylonPluginsNativeEngine/: CMakeLists.txt
Plugins/BabylonPolyfillsConsole/: CMakeLists.txt
Plugins/BabylonPolyfillsWindow/: CMakeLists.txt
Plugins/ChromeDevTools/: CMakeLists.txt
Plugins/CmdArgs/: CMakeLists.txt
Plugins/ConsolePolyfill/: CMakeLists.txt
Plugins/DataStream/: CMakeLists.txt
Plugins/ExternalTexture/: CMakeLists.txt  Readme.md
Plugins/NativeAudio/: CMakeLists.txt
Plugins/NativeCamera/: CMakeLists.txt
Plugins/NativeCapture/: CMakeLists.txt
Plugins/NativeDawn/: CMakeLists.txt
Plugins/NativeEncoding/: CMakeLists.txt  README.md
Plugins/NativeEngine/: CMakeLists.txt
Plugins/NativeEnginePlugin/: CMakeLists.txt
Plugins/NativeInput/: CMakeLists.txt
Plugins/NativeOptimizations/: CMakeLists.txt
Plugins/NativePerformanceLogger/: CMakeLists.txt
Plugins/NativeTracing/: CMakeLists.txt
Plugins/NativeVideo/: CMakeLists.txt
Plugins/NativeWebGPU/: CMakeLists.txt
Plugins/NativeWindow/: CMakeLists.txt
Plugins/NativeXr/: CMakeLists.txt
Plugins/NativeZip/: CMakeLists.txt
Plugins/ShaderCache/: CMakeLists.txt
Plugins/ShaderCompiler/: CMakeLists.txt
Plugins/ShaderTool/: CMakeLists.txt  README.md
Plugins/TestUtils/: CMakeLists.txt
Plugins/Window/: CMakeLists.txt
Plugins/WindowPolyfill/: CMakeLists.txt
Plugins/XMLHttpRequest/: CMakeLists.txt  XMLHttpRequest.cpp  XMLHttpRequest.h  XMLHttpRequestAndroid.h  XMLHttpRequestUWP.h
Plugins/Zip/: CMakeLists.txt  Readme.md
Polyfills/: CMakeLists.txt
Polyfills/Canvas/: CMakeLists.txt  Readme.md  shaderc.cmake
Polyfills/CanvasWgpu/: CMakeLists.txt  Readme.md
Polyfills/Console/: CMakeLists.txt  readme.md
Polyfills/CubeTexture/: CMakeLists.txt
Polyfills/DOM/: CMakeLists.txt
Polyfills/DecompressionStream/: CMakeLists.txt
Polyfills/DeviceInputSystem/: CMakeLists.txt
Polyfills/Script/: CMakeLists.txt
Polyfills/WebAudio/: CMakeLists.txt  Readme.md  readme.md
Polyfills/Window/: CMakeLists.txt  readme.md
Polyfills/XMLHttpRequest/: CMakeLists.txt  Readme.md  readme.md
(+1322 files in other folders)
