[workspace]
members = [
    "Core/GraphicsWgpu/Rust",
    "Core/GraphicsWgpu/Rust/upstream-shim",
    "Polyfills/CanvasWgpu/Rust",
]
resolver = "2"

[workspace.dependencies]
femtovg = { version = "=0.20.1", default-features = false, features = ["wgpu", "textlayout"] }
image = { version = "=0.25.9", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
imgref = "=1.12.0"
pollster = "=0.4.0"
raw-window-handle = "=0.6.2"
rgb = "=0.8.52"
wgpu = "=28.0.0"
