[workspace]
members = [
    "Core/GraphicsWgpu/Rust",
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "=1.23.2", features = ["derive"] }
femtovg = { version = "=0.19.3", default-features = false, features = ["wgpu", "textlayout"] }
image = { version = "=0.25.9", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
imgref = "=1.12.0"
pollster = "=0.4.0"
raw-window-handle = "=0.6.2"
rgb = "=0.8.52"
wgpu = "=27.0.1"
